--- a/trunk/TP1/Informe/66.02 - TP1.Grupo.1.tex
+++ b/trunk/TP1/Informe/66.02 - TP1.Grupo.1.tex
@@ -127,7 +127,7 @@
 \bigskip\bigskip
 
 
-
+% Tabla 1
 \begin{table}[!hbt]
 	\begin{center}
 	\begin{tabular}{|>{\centering\arraybackslash}m{5cm}|>{\arraybackslash}m{6cm}|}
@@ -177,10 +177,11 @@
 	Comencemos observando dos circuitos simples (\textit{Figura 1}). En estos se encuentran presentes los bornes A y B, sobre los cuales mediremos la tensión. En el caso de la \textit{Figura 1.a} se espera que idealmente, es decir, para una resistencia infinita del voltímetro, se lea una tensión de 9V sobre este último. Para el circuito de la \textit{Figura 1.b} también se espera que midamos 9V entre los bornes ya que estamos midiendo directamente la salida de la fuente.
 \bigskip
 
+% Figura 1
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.66\textwidth]{images/p1-item-1.jpg}
-	\caption{Estimación ideal de la caída de tensión entre los bornes A y B de los circuitos (a) y (b).}
+	\caption{Estimación ideal de la caída de tensión entre\\ los bornes A y B de los circuitos (a) y (b).}
 \end{figure}
 \bigskip
 
@@ -188,10 +189,11 @@
 	Adentrándonos en la parte experimental, pasaremos a medir la tensión sobre los bornes A y B de los circuitos de la \textit{Figura 2} utilizando un voltímetro analógico.
 \bigskip
 
+% Figura 2
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.94\textwidth]{images/p1-item-2.jpg}
-	\caption{Estimación ideal de la caída de tensión entre los bornes A y B de los circuitos (a) y (b).}
+	\caption{Estimación ideal de la caída de tensión entre\\ los bornes A y B de los circuitos (a) y (b).}
 \end{figure}
 \bigskip
 
@@ -239,13 +241,13 @@
 [ Colocar conclusión aquí ]
 \bigskip
 
-
+% Figura 3
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.86\textwidth]{images/p1-item-8.jpg}
 	\caption{Circuito divisor de tensión.}
 \end{figure}
-\bigskip
+\bigskip\bigskip
 
 
 	Considerando ahora el circuito divisor de tensión de la \textit{Figura 3}, se medirá la tensión sobre la resistencia $R_2$ ubicada en el mismo. Si lo analizamos teóricamente, esperamos obtener una caída de tensión de 6V. La medición empírica se ha realizado con un voltímetro analógico y uno digital. Los valores obtenidos fueron:
@@ -271,6 +273,7 @@ texto texto texto texto texto texto texto texto texto texto texto texto texto te
 	Se ha armado para el desarrollo de este apartado el circuito de medición mostrado en la \textit{Figura 4}. Hemos utilizado en esta ocación dos resistores cuyos valores están indicados como \textit{$R_1=100\Omega$} y \textit{$R_2=100k\Omega$}. Estos fueron colocados uno a la vez en el lugar representado en la figura como una resistencia \textit{R}. Las mediciones fueron realizadas con multímetros analógicos y también con digitales.
 \bigskip
 
+% Figura 4
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.72\textwidth]{images/p2-item-a.jpg}
@@ -279,9 +282,11 @@ texto texto texto texto texto texto texto texto texto texto texto texto texto te
 \bigskip\bigskip
 
 
-	En la \textit{Tabla 2} se pueden observar los valores medidos y calculados para este circuito.
+\noindent En la \textit{Tabla 2} se pueden observar los valores medidos y calculados para este circuito.
 \bigskip
 
+
+% Tabla 2
 \begin{table}[!hbt]
 	\begin{center}
 
@@ -296,12 +301,12 @@ texto texto texto texto texto texto texto texto texto texto texto texto texto te
 			\multirow{5}{*}{\textbf{100k$\Omega$}} 
 			& \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} & \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} \\\cline{2-9}
 			& V & mA & k$\Omega$ & \% & V & mA & k$\Omega$ & \% \\\cline{2-9}
-			& 2 & 0.020 & 99.2 &  & 2 & 0.030 & 50-100 &  \\\cline{2-9}
-			& 5 & 0.050 & 99.2 &  & 4 & 0.062 & 50-100 &  \\\cline{2-9}
-			& 8 & 0.080 & 99.2 &  & 6 & 0.094 & 50-100 &  \\ \hline
+			& 2 & 0.020 & 99.2 &  & 2 & 0.030 & 100 &  \\\cline{2-9}
+			& 5 & 0.050 & 99.2 &  & 4 & 0.062 & 100 &  \\\cline{2-9}
+			& 8 & 0.080 & 99.2 &  & 6 & 0.094 & 100 &  \\ \hline
 		\end{tabular}
 
-	\caption{Tabla de valores medidos y calculados para el circuito de la Figura 4.}
+	\caption{Tabla de valores medidos y calculados para el\\ circuito de la Figura 4.}
 	\end{center}
 \end{table}
 \bigskip
@@ -312,7 +317,7 @@ texto texto texto texto texto texto texto texto texto texto texto texto texto te
 	Hecho esto, se pasó a rearmar el circuito de manera de obtener la configuración mostrada en la \textit{Figura 5}. Nuevamente hemos utilizado dos resistores cuyos valores están indicados como \textit{$R_1=100\Omega$} y \textit{$R_2=100k\Omega$}. Estos fueron colocados uno a la vez en el lugar representado en la figura como una resistencia \textit{R}. Las mediciones fueron realizadas con multímetros analógicos y también con digitales.
 \bigskip
 
-
+% Figura 5
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.78\textwidth]{images/p2-item-b.jpg}
@@ -324,6 +329,8 @@ texto texto texto texto texto texto texto texto texto texto texto texto texto te
 	En la \textit{Tabla 3} se pueden observar los valores medidos y calculados para este último circuito.
 \bigskip
 
+
+% Tabla 3
 \begin{table}[!hbt]
 	\begin{center}
 
@@ -338,18 +345,52 @@ texto texto texto texto texto texto texto texto texto texto texto texto texto te
 			\multirow{5}{*}{\textbf{100k$\Omega$}} 
 			& \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} & \textbf{V} & \textbf{I} & \textbf{R} & \textbf{${\Delta R \over R}$} \\\cline{2-9}
 			& V & mA & k$\Omega$ & \% & V & mA & k$\Omega$ & \% \\\cline{2-9}
-			& 2 & 0.020 & 99.2 &  & 2 & 0.020 & 50-100 &  \\\cline{2-9}
-			& 5 & 0.050 & 99.2 &  & 4 & 0.040 & 50-100 &  \\\cline{2-9}
-			& 8 & 0.080 & 99.2 &  & 6 & 0.062 & 50-100 &  \\ \hline
+			& 2 & 0.020 & 99.2 &  & 2 & 0.020 & 100 &  \\\cline{2-9}
+			& 5 & 0.050 & 99.2 &  & 4 & 0.040 & 100 &  \\\cline{2-9}
+			& 8 & 0.080 & 99.2 &  & 6 & 0.062 & 100 &  \\ \hline
 		\end{tabular}
 
-	\caption{Tabla de valores medidos y calculados para el circuito de la Figura 5.}
+	\caption{Tabla de valores medidos y calculados para el\\ circuito de la Figura 5.}
 	\end{center}
 \end{table}
 \bigskip
 
 
-%% item (c)
+%% Cuestionario
+
+\textit{¿Qué diferencias se observan entre las mediciones realizadas?}
+\medskip
+
+	[ Colocar respuesta aquí ]
+\bigskip\bigskip
+
+
+\textit{¿A qué factores se deben esas diferencia?}
+\medskip
+
+	[ Colocar respuesta aquí ]
+\bigskip\bigskip
+
+
+\textit{¿Qué influencia tendrá el tipo de conexión de los instrumentos?}
+\medskip
+
+	[ Colocar respuesta aquí ]
+\bigskip\bigskip
+
+
+\textit{¿Qué nombre se le ocurriría poner a cada tipo de conexión?}
+\medskip
+
+	[ Colocar respuesta aquí ]
+\bigskip\bigskip
+
+
+\textit{¿De qué manera se pueden aplicar los conceptos obtenidos en la parte (a) en la (b)?}
+\medskip
+
+	[ Colocar respuesta aquí ]
+\bigskip\bigskip
 
 
 
